--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Welcome to Bike Life!"
+        android:text="Welcome to Bike On!"
         android:layout_marginTop="10sp"
         android:textAlignment="center"
         android:textSize="25sp" />
